Fixed overlapping tooltip glitch

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -100,7 +100,6 @@ body.modal-open {
     width:120px;
     left: 90%;
     top: 75%;
-    color: rgb(71, 169, 211);
     z-index: 2000;
 }
 
@@ -109,7 +108,6 @@ body.modal-open {
     width:120px;
     left: 90%;
     top: 80%;
-    color: rgb(71, 169, 211);
     z-index: 2000;
 }
 
@@ -118,42 +116,27 @@ body.modal-open {
     width:120px;
     left: 90%;
     top: 85%;
-    color: rgb(71, 169, 211);
     z-index: 2000;
 }
-
-/*#rotate-slider {
-  position:fixed;
-  right: 2%;
-  top: 45%;
-  color: rgb(71, 169, 211);
-  *//*opacity: 0.4;*//*
-  z-index: 2000;
-}*/
 
 #scale-slider{
   position:fixed;
   width:120px;
   right: 9%;
   top: 50%;
-  color: rgb(71, 169, 211);
-  /*opacity: 0.4;*/
   z-index: 2000;
 }
 
-#current-target {
+/*#current-target {
     text-align: center;
     position:fixed;
     right: 50%;
     top: 55px;
-    /*background-color:#000;    */
     border-radius: 10px;
-    /*color: #FFF;*/
-    /*opacity: 0;*/
     width: 20%;
     margin: 0 0 0 -10%;
     left:50%;
-}
+}*/
 
 #map-controls {
     /*display: table;*/
